# FlashRT

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.server  README.md  USAGE.md  pyproject.toml
benchmarks/: longctx_orig_192k_results_1783471003.json  phaseA_ab_results_1783463524.json  pi05_production_profile.py  qwen36_agent_sim.py  qwen36_graph_results.md  qwen36_graph_sweep.py  qwen36_maxseq_192k_vs_224k.py  qwen36_maxseq_results.md  qwen36_maxseq_sweep.py  qwen36_phaseA_ab.py  qwen36_pi_growth_sim.py  qwen36_spark_al_sweep.py
cpp/: CMakeLists.txt
cpp/families/vla/include/flashrt/cpp/families/vla/: manifest.h  runtime.h
cpp/modalities/include/flashrt/cpp/modalities/: action.h  types.h  vision.h
cpp/modalities/src/: action_cpu.cpp  types.cpp  vision_cpu.cpp  vision_cuda.cu
cpp/models/pi05/include/flashrt/cpp/models/pi05/: c_api.h  io.h  model_runtime.h  runtime.h  spec.h
cpp/models/pi05/src/: c_api.cpp  config_map.h  io.cpp  model_runtime.cpp  runtime.cpp  spec.cpp
cpp/runtime/include/flashrt/cpp/: runtime.h
cpp/tests/: gate_pi05_c_api_export.py  gate_pi05_model_runtime_export.py  test_device_staging.cpp  test_modalities.cpp  test_pi05_c_api.cpp  test_pi05_model_runtime.cpp  test_pi05_runtime.cpp
csrc/: bindings.cpp  fa2_bindings.cpp  minimax_remover_extra_bindings.cpp  omnivoice_extra_bindings.cpp  qwen3_vl_bindings.cpp
csrc/attention/: fa2_wrapper.cu  fa2_wrapper_causal.cu  fmha_fp8_causal_gqa_sm120.cu  fmha_fp8_causal_gqa_sm120.cuh
csrc/gemm/: fp8_block128_gemm_mma_sm89.cu  fp8_block128_gemm_mma_sm89.cuh  fp8_bs_gemm_device.cuh  fp8_gemv_m1_sm120.cu  fp8_gemv_m1_sm120.cuh  fp8_gemv_m1_sm89.cu  fp8_gemv_m1_sm89.cuh  gemm_runner.cu  gemm_runner.h
csrc/kernels/: act_fuse_sm120.cu  act_fuse_sm120.cuh  attention_cublas.cu  attention_cublas.cuh  bf16_matmul_bf16.cu  bf16_matmul_bf16.cuh  bf16_matmul_qwen36.cu  bf16_matmul_qwen36.cuh  bf16_matvec_sm120.cu  bf16_matvec_sm120.cuh  bias_epilogue_bf16.cu  causal_conv1d_qwen36.cu  causal_conv1d_qwen36.cuh  decoder_fused.cu  decoder_fused.cuh  elementwise.cu  elementwise.cuh  embedding_lookup_bf16.cu  embedding_lookup_bf16.cuh  fp4_swiglu_compact_sm120.cu  fp4_swiglu_compact_sm120.cuh  fp4_w4a4_mma_warpsplit_mrows_sm120.cu  fp4_w4a4_mma_warpsplit_mrows_sm120.cuh  fused_qk_norm_rope.cu  fused_qk_norm_rope.cuh  fusion.cu  fusion.cuh  gated_deltanet_qwen36.cu  gated_deltanet_qwen36.cuh  gdn_recurrent_seq_sm120.cu  gdn_recurrent_seq_sm120.cuh  int4_w4a4_mma_sm120.cu  int4_w4a4_mma_sm120.cuh  mbr_kernels.cu  mbr_kernels.cuh  moe_blocktile_mma_sm120.cu  moe_blocktile_mma_sm120.cuh  moe_grouped_gemv_sm120.cu  moe_grouped_gemv_sm120.cuh  moe_grouped_w4a16_sm120.cu  (+37 more)
csrc/quantize/: fp8_per_token_block_quant.cu  fp8_per_token_block_quant.cuh
docker/: Dockerfile
docs/: INSTALL.md  PERFORMANCE_OMNIVOICE.md  architecture.md  benchmark_comparison.md  calibration.md  cosmos3_video_usage.md  cpp_runtime_design.md  cpp_runtime_modalities.md  higgs_audio_v3.md  int4_blackwell.md  kernel_fusion.md  lingbot_usage.md  melband_roformer_usage.md  minimax_remover_usage.md  model_runtime_api.md  motus_usage_beta.md  nexn2_usage.md  pi-developer-role.md  pi-developer-role.patch  pr_review_checklist.md  qwen36_dflash.md  qwen36_nvfp4.md  qwen36_spark.md  qwen36_usage.md  qwen3_8b_nvfp4.md  qwen3_vl_fp8_sm89.md  qwen3_vl_fp8_sm89_2b.md  qwen3_vl_nvfp4.md  qwen3_vl_rtx_bf16.md  rtc_lite_design.md  rtc_temporal_fusion.md  runtime_contract.md  serving_design.md  stable_api.md  subgraph_stage_plans.md  vlash.md
examples/: cosmos3_video_quickstart.py  minimax_remover_quickstart.py  motus_rtc_lite.py  omnivoice_quickstart.py  quickstart.py  qwen3_openai_server.py  qwen3_vl_openai_server.py  qwen3_vl_quickstart.py  server.py
examples/archive/: qwen36_openai_server.py
examples/blackwell/: README.md  bench_pi05_fp16.py
examples/orin/: qwen3_vl_quickstart.py
examples/thor/: README.md
exec/bindings/: exec_pybind.cpp
exec/src/: buffer.cpp  context.cpp  graph.cpp  internal.h  plan.cpp
exec/tests/: test_adopt_pi05.py  test_plan_vla.py
flash_rt/: api.py
flash_rt/configs/: cosmos3_video.yaml  nexn2.yaml
flash_rt/core/: calibration_api.py  thor_frontend_utils.py
flash_rt/frontends/: _fp8_layout.py
flash_rt/hardware/: __init__.py
flash_rt/models/: __init__.py
flash_rt/runtime/: __init__.py  export.py  rtc.py  rtc_temporal_fusion.py  vlash.py
flash_rt/subgraphs/: __init__.py  capture.py  stage_plan.py
runtime/: CMakeLists.txt
runtime/bindings/: runtime_pybind.cpp
runtime/include/flashrt/: model_runtime.h  runtime.h
runtime/src/: internal.h  model_runtime.cpp  runtime_export.cpp
runtime/tests/: test_model_runtime.cpp  test_model_runtime_py.py  test_runtime_export.py
scripts/: bench_fp8_lmhead.py  bench_gemv_sm89.py  bench_graph_replay.py  bench_prefill_gemm.py  build_inventory.py  build_server.sh  profile_prefill_breakdown.py  profile_qwen3_vl_fp8_sm89.py  quantize_qwen3_vl_to_fp8_block128.py  smoke_qwen3_vl_fp8_sm89.py
serving/: README.md
serving/higgs_audio_agent/: README.md
serving/omnivoice_agent/: README.md  server.py
serving/qwen36_agent/: README.md  __init__.py  engine.py  openai_stream.py  prefix.py  qwen36_engine.py  (+4 more)
tests/: bench_rtc_temporal_fusion.py  test_build_inventory.py  test_calibration_api.py  test_generic_kernel_bindings.py  test_load_model_use_fp8_kwarg.py  test_melband_roformer_smoke.py  test_minimax_remover_smoke.py  test_nexn2_smoke.py  test_omnivoice_smoke.py  test_pi05_rtx_autotune_scratch.py  test_pi05_state_prompt_fixed_graph.py  test_prompt_runtime_lifecycle.py  test_qwen36_agent_capsule_serving.py  test_qwen36_agent_serving_policy.py  test_qwen36_dflash_structural.py  test_qwen36_server_warmup.py  test_qwen3_prefill_maintenance.py  test_qwen3_vl_fp8_sm89.py  test_qwen3_vl_fp8_sm89_2b.py  test_qwen3_vl_graph_cache.py  test_qwen3_vl_rtx_bf16.py  test_qwen3_vl_smoke.py  test_rtc_temporal_fusion.py  test_rtc_temporal_fusion_pi05.py  test_vlash.py  test_vlash_pi05.py  test_weight_loader.py
tools/: patch_int4_omma_sm120.py  quantize_qwen3_vl_nvfp4.py
(+139 files in other folders)
